@@ -59,6 +59,7 @@ commands = {'atz' : 'ELM327 v1.2',
             '011D' : '41 1D 45',
             '011E' : '41 1E 80',
             '011F' : '41 1F 45 78',
+            '0120' : '41 20 FF000000',
             '03' : '43 07 04 06 34 05 23',
             '04' : '44',
             '0200' : '42 00 FFFFFFFF',
